// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`refractor elements ParametersElement should refract to semantic ApiDOM tree 1`] = `
(ParametersElement
  (MemberElement
    (StringElement)
    (ParameterElement))
  (MemberElement
    (StringElement)
    (ParameterElement)))
`;

exports[`refractor elements given field is of type ReferenceElement should refract to semantic ApiDOM tree 1`] = `
(ParametersElement
  (MemberElement
    (StringElement)
    (ParameterElement))
  (MemberElement
    (StringElement)
    (ReferenceElement
      (MemberElement
        (StringElement)
        (StringElement)))))
`;
